<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zaylabs.truckadda.activities.MapsActivity" >

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttons">
    <Button
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/logout"
        android:text="@string/logout"/>
  <!--      <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/history"
            android:text="history"/>
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/settings"
            android:text="Settings"/>
-->
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_below="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp">
        <fragment
            android:id="@+id/place_autocomplete_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            />
    </android.support.v7.widget.CardView>
</RelativeLayout>



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="bottom">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/driverInfo"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:visibility="gone">

        <ImageView
            android:id="@+id/driverProfileImage"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:contentDescription="@string/locationimg_dec"
            android:padding="20sp"
            android:src="@drawable/user_default" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="40sp"
            android:paddingEnd="0sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/driverName"
                android:paddingBottom="10sp"
                android:paddingTop="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/driverPhone"
                android:paddingBottom="10sp"
                android:paddingTop="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/driverCar"
                android:paddingBottom="10sp"
                android:paddingTop="20sp"/>
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBar"
                android:layout_gravity="center"
                android:numStars="5"
                android:stepSize="0.1"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:background="@android:color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/truck1"
                android:id="@+id/truck1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/truck2"
                android:id="@+id/truck2"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/truck3"
                android:id="@+id/truck3"/>
        </RadioGroup>

        <Button
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/REQUEST_RIDE"
            android:id="@+id/request"/>
        <Button
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Ride_Later"
            android:id="@+id/ride_later"/>
    </LinearLayout>
</LinearLayout>

</FrameLayout>

